--- a/index.html
+++ b/index.html
@@ -2,18 +2,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <script async src="https://api.glia.com/salemove_integration.js"></script>
   </head>
-<body style="background-color:red;">>
+<body style="background-color:green;">>
 
 <h1>My First Heading</h1>
 <p>My first paragraph.</p>
     
     <br>
-    <button id="test">Regular button</button>
-    <button class="omnibrowse-code-button" onclick="document.body.appendChild(document.createElement('sm-visitor-code'))">Visitor code</button><br>
-    <img id="test-1" src="4f0937e1c68d2e09df9e1d1ade622514.jpg" alt="Italian Trulli">
-  
  <br>
  <br>
  <a href="https://erxx99.github.io/firstlink.html">Same domain</a>
