--- a/index.html
+++ b/index.html
@@ -3,6 +3,21 @@
 <html>
   <head>
     <script async src="https://api.glia.com/salemove_integration.js?"></script>
+    <script>
+    window.onload = function(){
+	  sm.getApi({version: 'v1'}).then(function(glia) {
+			glia.updateInformation({
+			"Name": null,
+      customAttributes: {}
+			}).then(function() {
+		  }).catch(function(error) {
+  				if (error.cause == glia.ERRORS.NETWORK_TIMEOUT) {
+  				} else {
+			}
+			});
+	    });
+      };
+      </script>
   </head>
 <body style="background-color:green;">>
 
