--- a/index.html
+++ b/index.html
@@ -4,19 +4,20 @@
   <head>
     <script async src="https://api.glia.com/salemove_integration.js?"></script>
     <script>
-    window.onload = function(){
-	  sm.getApi({version: 'v1'}).then(function(glia) {
+       window.onload = function(){
+	sm.getApi({version: 'v1'}).then(function(glia) {
 			glia.updateInformation({
 			"Name": null,
-      customAttributes: {}
+			"phone": null,
+    			customAttributes: {}
 			}).then(function() {
-		  }).catch(function(error) {
+		}).catch(function(error) {
   				if (error.cause == glia.ERRORS.NETWORK_TIMEOUT) {
   				} else {
 			}
 			});
-	    });
-      };
+	});
+};
       </script>
   </head>
 <body style="background-color:green;">>
