--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
        window.onload = function(){
 	sm.getApi({version: 'v1'}).then(function(glia) {
 			glia.updateInformation({
-			"Name": null,
+			"name": null,
 			"phone": null,
     			customAttributes: {}
 			}).then(function() {
